--- a/style.css
+++ b/style.css
@@ -2,6 +2,11 @@ body{
     padding: 0;
     margin: 0;
     overflow: hidden;
+    font-family: 'Inter', sans-serif;
+    font-weight: 500;
+    color: #677788;
+    font-size: 14px;
+    line-height: normal;
 }
 
 .top-section {
@@ -29,14 +34,9 @@ body{
 
 .text {
     color: #677788;
-    font-family: Inter;
-    font-size: 14px;
-    font-style: normal;
-    font-weight: 500;
-    line-height: normal;
+    text-decoration: none;
 }
 
-a {text-decoration: none;}
 a:hover { color:#2476FF;}
 
 ul {list-style-type: none;}
