--- a/style.css
+++ b/style.css
@@ -8,76 +8,7 @@ body{
     line-height: normal;
 }
 
-.top-section {
-    width: 100%;
-}
-
-.header {
-    display: flex;
-    height: 86px;
-    padding: 10px 30px;
-    justify-content: space-between;
-    align-items: center;
-}
-
-.nav{
-    display: flex;
-    padding: 6px 14px;
-    align-items: center;
-    gap: 30px;
-}
-
-a:hover { color:#2476FF;}
-
-ul {list-style-type: none;}
-
-.linktext {
-    color: #677788;
-    text-decoration: none;
-}
-
-.button {
-    display: flex;
-    padding: 15px 25px;
-    align-items: center;
-    gap: 8px;
-    border-width: 0;
-    border-radius: 30px;
-    background: #2476FF;
-}
-
-#btntext {
-    color: #FFF;
-}
-
-.hero {
-    display: flex;
-    width: 1024px;
-    padding: 40px 30px 0px 30px;
-    align-items: flex-start;
-    gap: 10px;
-}
-
-.left {
-    display: flex;
-    padding-bottom: 0px;
-    flex-direction: column;
-    justify-content: center;
-    align-items: flex-start;
-    gap: 30px;
-    flex: 1 0 0;
-    align-self: stretch;
-}
-
-.toptext {
-    display: flex;
-    width: 334px;
-    flex-direction: column;
-    align-items: flex-start;
-    gap: 11px;
-}
-
-.title {
+h1 {
     color: #000;
     font-size: 40px;
     font-weight: 500;
@@ -101,18 +32,88 @@ h3 {
     font-size: 16px;
 }
 
-.actions {
+ul {list-style-type: none;}
+
+.header {
     display: flex;
+    height: 86px;
+    padding: 10px 30px;
+    justify-content: space-between;
     align-items: center;
-    gap: 24px;
-    align-self: stretch;
 }
 
-.learnmore {
-    color: #2476FF;
-    text-decoration: none;
-    font-weight: 700;
+    .nav{
+        display: flex;
+        padding: 6px 14px;
+        align-items: center;
+        gap: 30px;
+    }
+
+    a:hover { color:#2476FF;}
+
+    .linktext {
+        color: #677788;
+        text-decoration: none;
+    }
+
+    .button {
+        display: flex;
+        padding: 15px 25px;
+        align-items: center;
+        gap: 8px;
+        border-width: 0;
+        border-radius: 30px;
+        background: #2476FF;
+    }
+
+    #btntext {
+        color: #FFF;
+        font-size: 12px;
+        font-weight: 500;
+    }
+
+.hero {
+    display: flex;
+    width: 1024px;
+    padding: 40px 30px 0px 30px;
+    align-items: flex-start;
+    gap: 10px;
 }
+
+    .left {
+        display: flex;
+        padding-bottom: 0px;
+        flex-direction: column;
+        justify-content: center;
+        align-items: flex-start;
+        gap: 30px;
+        flex: 1 0 0;
+        align-self: stretch;
+    }
+
+        .toptext {
+            display: flex;
+            width: 334px;
+            flex-direction: column;
+            align-items: flex-start;
+            gap: 11px;
+        }
+
+        .actions {
+            display: flex;
+            align-items: center;
+            gap: 24px;
+            align-self: stretch;
+        }
+
+        .learnmore {
+            color: #2476FF;
+            text-decoration: none;
+            font-weight: 700;
+        }
+    .right {
+
+    }
 
 .key-benefits {
     display: flex;
@@ -123,59 +124,90 @@ h3 {
     align-self: stretch;
 }
 
-.benefits-title {
+    .benefits-title {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        gap: 10px;
+    }
+
+    .benefit-list {
+        display: flex;
+        padding: 10px 30px;
+        justify-content: center;
+        align-items: flex-start;
+        gap: 30px;
+        align-self: stretch;
+        height: auto;
+    }
+
+    .benefit-item {
+        display: flex;
+        padding: 20px;
+        flex-direction: column;
+        align-items: flex-start;
+        border: 1px solid #FFF;
+        background: #FFF;
+        box-shadow: 0px 10px 20px 0px rgba(0, 0, 0, 0.15);
+    }
+
+    .item-content {
+        display: flex;
+        flex-direction: column;
+        align-items: flex-start;
+        gap: 20px;
+        align-self: stretch;
+    }
+
+    .item-icon {
+        width: 50px;
+        height: 50px;
+    }
+
+    .top-part {
+        display: flex;
+        align-items: center;
+        gap: 20px;
+        align-self: stretch;
+    }
+
+    .status {
+        display: flex;
+        padding: 4px 10px;
+        align-items: flex-start;
+        gap: 10px;
+        border-radius: 15px;
+        background: #01C9A7;
+        color: #FFF;
+    }
+
+.banner {
     display: flex;
-    flex-direction: column;
-    align-items: center;
+    padding: 0px 30px 80px 30px;
+    align-items: flex-start;
     gap: 10px;
+    height: 450px;
 }
 
-.benefit-list {
-    display: flex;
-    padding: 10px 30px;
-    justify-content: center;
-    align-items: flex-start;
-    gap: 30px;
-    align-self: stretch;
-    height: auto;
-}
+    .leftpart {
+        display: flex;
+        padding: 10px 30px;
+        width: 50%;
+        flex-direction: column;
+        justify-content: center;
+        align-items: flex-start;
+        gap: 26px;
+        align-self: stretch;
+    }
 
-.benefit-item {
-    display: flex;
-    padding: 20px;
-    flex-direction: column;
-    align-items: flex-start;
-    border: 1px solid #FFF;
-    background: #FFF;
-    box-shadow: 0px 10px 20px 0px rgba(0, 0, 0, 0.15);
-}
+    .rightpart {
+        display: flex;
+        height: 450px;
+        justify-content: flex-end;
+        align-items: flex-end;
+        gap: 10px;
+    }
 
-.item-content {
-    display: flex;
-    flex-direction: column;
-    align-items: flex-start;
-    gap: 20px;
-    align-self: stretch;
-}
-
-.item-icon {
-    width: 50px;
-    height: 50px;
-}
-
-.top-part {
-    display: flex;
-    align-items: center;
-    gap: 20px;
-    align-self: stretch;
-}
-
-.status {
-    display: flex;
-    padding: 4px 10px;
-    align-items: flex-start;
-    gap: 10px;
-    border-radius: 15px;
-    background: #01C9A7;
-    color: #FFF;
-}
+    .bannerimg1 {
+        max-height: 353px;
+    }
