--- a/style.css
+++ b/style.css
@@ -84,29 +84,28 @@ ul {list-style-type: none;}
 
 .hero {
     display: flex;
-    width: 1024px;
+    max-width: 100%;
     padding: 40px 30px 0px 30px;
-    align-items: flex-start;
     gap: 10px;
 }
 
     .left {
         display: flex;
+        min-width: 50%;
         padding-bottom: 0px;
         flex-direction: column;
         justify-content: center;
         align-items: flex-start;
         gap: 30px;
-        flex: 1 0 0;
         align-self: stretch;
     }
 
         .toptext {
-            display: flex;
-            width: 334px;
+            display: flex;          
             flex-direction: column;
             align-items: flex-start;
             gap: 11px;
+            max-width: 70%;
         }
 
         .actions {
@@ -122,8 +121,93 @@ ul {list-style-type: none;}
             font-weight: 700;
         }
     .right {
-
+        display: grid;
+        grid-template-columns: repeat(4, 1fr);
+        grid-auto-rows: auto;
+        grid-template-areas: 
+            "a b . c"
+            "d . e ."
+            ". f . g";
+        height: 406px;
+        width: 100%;
+        gap: 10px;
     }
+
+        .a {
+            grid-area: a;
+            align-self: start;
+            justify-self: right;
+        }
+
+        .b {
+            grid-area: b;
+            align-self: start;
+            justify-self: right;
+        }
+
+        .c {
+            grid-area: c;
+            align-self: start;
+            justify-self: right;
+        }
+
+        .d {
+            grid-area: d;
+            align-self: center;
+            justify-self: center;
+        }
+
+        .e {
+            grid-area: e;
+            align-self: center;
+            justify-self: left;
+        }
+
+        .f {
+            grid-area: f;
+            align-self: start;
+            justify-self: center;
+        }
+
+        .g {
+            grid-area: g;
+            align-self: center;
+            justify-self: left;
+        }
+
+        .logo {
+            width: 90%;
+            padding: 10px;
+            align-self: center;
+        }
+
+        .logobg {
+            display: flex;
+            width: 40px;
+            height: 40px;
+            padding: 10px;
+            justify-content: center;
+            border-radius: 60px;
+            background: #FFF;
+            box-shadow: 0px 3px 13px 0px rgba(0, 0, 0, 0.25);
+        }
+
+        .logo2 {
+            width: 80%;
+            padding: 16px;
+            align-self: center;
+        }
+
+        .logobg2 {
+            display: flex;
+            width: 60px;
+            height: 60px;
+            padding: 10px;
+            justify-content: center;
+            border-radius: 60px;
+            background: #FFF;
+            box-shadow: 0px 3px 13px 0px rgba(0, 0, 0, 0.25);
+        }
 
 .key-benefits {
     display: flex;
