--- a/style.css
+++ b/style.css
@@ -28,8 +28,10 @@ h2 {
 }
 
 h3 {
-    color: #000;
-    font-size: 16px;
+    color: #5F6368;
+    font-size: 20px;
+    font-weight: 700;
+    text-align: center;
 }
 
 ul {list-style-type: none;}
@@ -323,5 +325,27 @@ ul {list-style-type: none;}
         align-items: center;
         gap: 24px;
         display: flex;
+        flex: 1 0 0;
+    }
+
+.brands {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    gap: 45px;
+    padding-bottom: 80px;
+}
+
+    .brandslist {
+        display: flex;
+        height: 59px;
+        padding: 0px 30px;
+        align-items: space-between;
+        align-self: stretch;
+    }
+
+    .brandsicon {
+        height: 40px;
         flex: 1 0 0;
     }
