--- a/style.css
+++ b/style.css
@@ -12,12 +12,14 @@ h1 {
     color: #000;
     font-size: 40px;
     font-weight: 500;
-    padding: 0;
+    padding: 0; 
     margin: 0;
 }
 
 p {
-    padding: 0;
+    font-weight: 500;
+    font-size: 16px;
+    padding: 0; 
     margin: 0;
 }
 
@@ -25,6 +27,8 @@ h2 {
     color: #000;
     font-size: 26px;
     font-weight: 700;
+    padding: 0; 
+    margin: 0;
 }
 
 h3 {
@@ -32,6 +36,8 @@ h3 {
     font-size: 20px;
     font-weight: 700;
     text-align: center;
+    padding: 0; 
+    margin: 0;
 }
 
 ul {list-style-type: none;}
@@ -272,10 +278,11 @@ ul {list-style-type: none;}
 
 .banner {
     display: flex;
-    padding: 0px 30px 80px 30px;
+    margin: 0px 30px 80px 30px;
     align-items: flex-start;
     gap: 10px;
     height: 450px;
+    background-color: rgba(211,211,211,0.15);
 }
 
     .leftpart {
@@ -291,10 +298,12 @@ ul {list-style-type: none;}
 
     .rightpart {
         display: flex;
-        height: 450px;
+        width: 100%;
         justify-content: flex-end;
         align-items: flex-end;
+        align-self: stretch;
         gap: 10px;
+        flex: 1 0 0;
     }
 
     .bannerimg1 {
@@ -349,3 +358,73 @@ ul {list-style-type: none;}
         height: 40px;
         flex: 1 0 0;
     }
+
+.pricing {
+    display: flex;
+    padding-bottom: 0px;
+    flex-direction: column;
+    align-items: flex-start;
+    gap: 60px;
+    align-self: stretch;
+}
+    .pricingtitle {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        gap: 10px;
+        align-self: stretch;
+    }
+
+    .plansfeatures {
+        display: flex;
+        padding: 0px 44px;
+        align-items: flex-start;
+        gap: 30px;
+        align-self: stretch;
+    }
+
+        .plan {
+            display: flex;
+            width: 30%;
+            padding: 40px;
+            gap: 50px;
+            flex-direction: column;
+            justify-content: center;
+            align-items: flex-start;
+            border: 1px solid #FFF;
+            background: #FFF;
+            box-shadow: 0px 10px 20px 0px rgba(0, 0, 0, 0.15);
+        }
+
+        .planheader{
+            display: flex;
+            flex-direction: column;
+            align-items: flex-start;
+            align-self: stretch;
+            gap: 30px;
+        }
+
+        .planprice {
+            display: flex;
+            flex-direction: row;
+            align-items: baseline;
+            gap: 7px;
+            width: auto;
+            height: auto;
+            padding: 0; 
+            margin: 0;
+        }
+
+        .plandivider {
+            display: flex;
+            height: 1px;
+            align-self: stretch;
+            background: #8D8D8D;
+        }
+
+        .planfooter{
+            display: flex;
+            flex-direction: column;
+            align-items: start;
+            gap: 10px;
+        }
