--- a/style.css
+++ b/style.css
@@ -366,6 +366,7 @@ ul {list-style-type: none;}
     align-items: flex-start;
     gap: 60px;
     align-self: stretch;
+    margin-bottom: 120px;
 }
     .pricingtitle {
         display: flex;
@@ -428,3 +429,62 @@ ul {list-style-type: none;}
             align-items: start;
             gap: 10px;
         }
+.hireus {
+    display: flex;
+    width: 100%;
+    align-items: flex-start;
+    background: #20335B;
+}
+    .hireleft {
+        display: flex;
+        padding-left: 70px;
+        flex-direction: column;
+        justify-content: center;
+        align-items: flex-start;
+        gap: 60px;
+        align-self: stretch;
+        width: 50%;
+    }
+
+        .hiretop {
+            display: flex;
+            flex-direction: column;
+            align-items: flex-start;
+            gap: 32px;
+        }
+
+            .hiretitle {
+                display: flex;
+                width: 180px;
+                flex-direction: column;
+                justify-content: center;
+                align-items: flex-start;
+                gap: 34px;
+            }
+
+        .hirebottom {
+            display: flex;
+            flex-direction: column;
+            align-items: flex-start;
+            gap: 50px;
+        }
+
+            .person {
+                display: flex;
+                padding-right: 0px;
+                flex-direction: column;
+                justify-content: center;
+                align-items: flex-start;
+                gap: 4px;
+            }
+
+            .personimgs {
+                display: flex;
+                align-items: center;
+                gap: 30px;
+            }
+                .hireimg {
+                    width: 40px;
+                    height: 40px;
+                    border-radius: 20px;
+                }
