--- a/style.css
+++ b/style.css
@@ -376,7 +376,7 @@ ul {list-style-type: none;}
         align-self: stretch;
     }
 
-    .plansfeatures {
+    .plansfeatureslist {
         display: flex;
         padding: 0px 44px;
         align-items: flex-start;
@@ -386,7 +386,6 @@ ul {list-style-type: none;}
 
         .plan {
             display: flex;
-            width: 30%;
             padding: 40px;
             gap: 50px;
             flex-direction: column;
@@ -397,38 +396,86 @@ ul {list-style-type: none;}
             box-shadow: 0px 10px 20px 0px rgba(0, 0, 0, 0.15);
         }
 
-        .planheader{
-            display: flex;
-            flex-direction: column;
+            .planheader{
+                display: flex;
+                flex-direction: column;
+                align-items: flex-start;
+                align-self: stretch;
+                gap: 30px;
+            }
+
+            .planprice {
+                display: flex;
+                flex-direction: row;
+                align-items: baseline;
+                gap: 7px;
+                width: auto;
+                height: auto;
+                padding: 0; 
+                margin: 0;
+            }
+
+            .plandivider {
+                display: flex;
+                height: 1px;
+                align-self: stretch;
+                background: #8D8D8D;
+            }
+
+            .planfooter{
+                display: flex;
+                flex-direction: column;
+                align-items: start;
+                gap: 10px;
+                padding-bottom: 40px;
+            }
+        
+        .plansfeatures {
+            display: grid;
             align-items: flex-start;
-            align-self: stretch;
             gap: 30px;
-        }
-
-        .planprice {
-            display: flex;
-            flex-direction: row;
-            align-items: baseline;
-            gap: 7px;
-            width: auto;
-            height: auto;
-            padding: 0; 
-            margin: 0;
-        }
-
-        .plandivider {
-            display: flex;
-            height: 1px;
             align-self: stretch;
-            background: #8D8D8D;
         }
 
-        .planfooter{
-            display: flex;
-            flex-direction: column;
-            align-items: start;
-            gap: 10px;
-        }
+            .row {
+                display: flex;
+                align-items: flex-start;
+                gap: 10px;
+                align-self: stretch;
+            }
+
+            .planfeatureitem {
+                display: flex;
+                padding: 20px;
+                flex-direction: column;
+                align-items: flex-start;
+                gap: 20px;
+            }
+
+            .itemcontent {
+                display: flex;
+                flex-direction: column;
+                align-items: flex-start;
+                gap: 20px;
+                align-self: stretch;
+            }
+
+            .itemtop {
+                display: flex;
+                flex-direction: column;
+                align-items: flex-start;
+                gap: 20px;
+                align-self: stretch;
+            }
+
+            .titlewithicon {
+                display: flex;
+                align-items: center;
+                gap: 10px;
+            }
+
+
+
 .hireus {
     display: flex;
     width: 100%;
